syntax = "proto3";

package ntx.v1;

option go_package = "github.com/voidarchive/ntx/gen/go/ntx/v1;ntxv1";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  int64 user_id = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse { int64 user_id = 1; }
